--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'us-central1-docker.pkg.dev/lukelynch-io/docker-repo/electric-parrot-api:$SHORT_SHA', '.']
+  args: ['build', '-t', 'us-central1-docker.pkg.dev/${PROJECT_ID}/docker-repo/electric-parrot-api:$SHORT_SHA', '.']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', '-t', 'us-central1-docker.pkg.dev/lukelynch-io/docker-repo/electric-parrot-api:$SHORT_SHA']
+  args: ['push', 'us-central1-docker.pkg.dev/${PROJECT_ID}/docker-repo/electric-parrot-api:$SHORT_SHA']
