--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,4 +4,4 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'us-central1-docker.pkg.dev/${PROJECT_ID}/docker-repo/electric-parrot-api:$SHORT_SHA']
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['run', 'deploy', 'hello', '--region=us-central1', 'platform=managed', '--image=us-central1-docker.pkg.dev/${PROJECT_ID}/docker-repo/electric-parrot-api:$SHORT_SHA']
+  args: ['run', 'deploy', 'hello', '--region=us-central1', '--platform=managed', '--image=us-central1-docker.pkg.dev/${PROJECT_ID}/docker-repo/electric-parrot-api:$SHORT_SHA']
